# fdk-mqa-scoring-service

./: AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  measurement_graph.ttl
.github/workflows/: deploy-prod&demo.yaml  deploy-staging.yaml
deploy/base/: deployment-fdk-mqa-scoring-service.yaml  kustomization.yaml  service-fdk-mqa-scoring-service.yaml
deploy/demo/: env.yaml
deploy/prod/: env.yaml
deploy/staging/: env.yaml
graphs/: dcatno-mqa-vocabulary-default-score-values.ttl  dcatno-mqa-vocabulary.ttl
kafka/: create_topics.sh
kafka/schemas/: no.fdk.mqa.MQAEvent.json
migrations/2022-06-09-141909_graphs/: up.sql
migrations/2022-06-09-141910_graphs_delete/: up.sql
migrations/2022-06-09-141912_datasets/: up.sql
migrations/2022-06-09-141915_dimensions/: down.sql  up.sql
migrations/2022-06-10-124657_dataset_catalogs/: down.sql  up.sql
src/: assessment_graph.rs  database.rs  dcatno_ap.rs  error.rs  graph.rs  helpers.rs  json_conversion.rs  kafka.rs  lib.rs  main.rs  measurement_graph.rs  measurement_value.rs  models.rs  quality_measurements.rs  rdf.rs  schema.rs  schemas.rs  score.rs  score_graph.rs  store.rs  test.rs  tmp.rs  vocab.rs
tests/: expected.json  expected.ttl  integration_test.rs  kafka_utils.rs  utils.rs
tests/data/new_dataset/: assessment.ttl  scores.json
tests/data/second_half_of_dataset/: api_response.ttl  assessment.ttl  scores.json
