[package]
name = "fdk-mqa-scoring-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
apache-avro = "0.20.0"
chrono = "0.4.42"
futures = "0.3.31"
httptest = "0.16.3"
lazy_static = "1.5.0"
oxigraph = "0.5.1"
prometheus = "0.13.4"
rdkafka = "0.37.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json"] }
schema_registry_converter = { version = "4.6.0", features = ["avro", "blocking"] }
serde = "1.0.228"
serde_json = "1.0.145"
sophia_api = "0.9.0"
sophia_inmem = "0.9.0"
sophia_jsonld = "0.9.0"
sophia_turtle = "0.9.0"
thiserror = "2.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter", "tracing-log"] }
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
sophia_isomorphism = "0.9.0"
