[package]
name = "fdk-mqa-scoring-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.13.0"
apache-avro = "0.21.0"
chrono = "0.4.44"
futures = "0.3.32"
httptest = "0.16.4"
lazy_static = "1.5.0"
oxigraph = "0.5.5"
prometheus = "0.14.0"
rdkafka = "0.37.0"
regex = "1.12.3"
reqwest = { version = "0.13", features = ["json"] }
schema_registry_converter = { version = "4.8.0", features = ["avro", "blocking"] }
serde = "1.0.228"
serde_json = "1.0.149"
sophia_api = "0.9.0"
sophia_inmem = "0.9.0"
sophia_jsonld = "0.9.0"
sophia_turtle = "0.9.0"
thiserror = "2.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter", "tracing-log"] }
uuid = { version = "1.21.0", features = ["v4"] }

[dev-dependencies]
sophia_isomorphism = "0.9.0"
